--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "commontools",
-  "version": "1.0.0",
+  "name": "zjtcommontools",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
